# rUv-dev

./: .gitignore  .roomodes  CHANGELOG.md  LICENSE  README.md  audit-security.js  bootstrap.sh  index.html  jest.config.js  jupyter_config.py  litellm_config.py  mcp-instructions.md  open_interpreter_config.py  package-lock.json  package.json  ruv_setup.py  server.js  setup.sh  super_coder.py  test.html
fine-tune-mcp/: .gitignore  =0.22.0  Makefile  README.md  mcp_training_data.jsonl  openai-fine-tune.md  pyproject.toml  pytest.ini  sample_training_data.jsonl  training_data.jsonl
fine-tune-mcp/docs/: archive-instructions.md  testing.md
fine-tune-mcp/fine-tuning/: .gitignore  mcp-server-wrapper.js  test-server.js  tool.json  tsconfig.json
fine-tune-mcp/fine-tuning/src/: config.ts  index.ts
fine-tune-mcp/fine_tune_mcp/: __init__.py  config.py  openai_integration.py  server.py
fine-tune-mcp/fine_tune_mcp/examples/: README.md  __init__.py  provider_example.py  training_data.jsonl
fine-tune-mcp/fine_tune_mcp/fine-tune-mcp/: completion_format_data.jsonl  fixed_chat_format.jsonl  fixed_completion_format.jsonl  improved_training_data.jsonl  minimal_format.jsonl  minimal_training_data.jsonl  new_training_data.jsonl  rft_test_data.jsonl  rft_training_data.jsonl  single_example.jsonl  single_example_final.jsonl  standard_chat_format.jsonl
fine-tune-mcp/fine_tune_mcp/prompts/: __init__.py  sample_prompts.py
fine-tune-mcp/fine_tune_mcp/providers/: IMPLEMENTATION.md  README.md  __init__.py  base.py  openai_provider.py  (+1 more)
fine-tune-mcp/tests/: __init__.py  conftest.py
(+226 files in other folders)
